Single Movie UI

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                                         <div class="content main-links">
                                             <a href="#">
                                                 <h4 class="title">Con Nhót Mót Chồng</h4>
-                                                <p class="mini-text">Hài hước</p>
+                                                <p class=" genre mini-text">Hài hước</p>
                                             </a>
                                         </div>
                                     </div>
