--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <title>CineMagic | Go Cinema By Magic</title>
     <link rel="shortcut icon" href="/assets/img/favicon.png" type="image/x-icon">
     <!-- Remix Icon -->
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@3.3.0/fonts/remixicon.min.css">
     <!-- Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Swiper -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
-    <link rel="stylesheet/less" href="./assets/css/style.less" />
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet/less" href="/assets/css/style.less" />
 </head>
 
 <body>
@@ -126,7 +128,7 @@
                                         <div class="poster">
                                             <a data-fslightbox="1" href="https://www.youtube.com/watch?v=e7KHOQ-alqY">
                                                 <div class="bg-img thumbnail"
-                                                    style="background-image: url(./assets/img/poster/connhot.jpg);">
+                                                    style="background-image: url(/assets/img/poster/connhot.jpg);">
                                                 </div>
                                                 <div class="play-btn">
                                                     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
@@ -158,7 +160,7 @@
                                         <div class="poster">
                                             <a data-fslightbox="2" href="https://www.youtube.com/watch?v=2EnP2tVC00Q">
                                                 <div class="bg-img thumbnail"
-                                                    style="background-image: url(./assets/img/poster/latmat6.jpg);">
+                                                    style="background-image: url(/assets/img/poster/latmat6.jpg);">
                                                 </div>
                                                 <div class="play-btn">
                                                     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
@@ -190,7 +192,7 @@
                                         <div class="poster">
                                             <a href="#">
                                                 <div class="bg-img thumbnail"
-                                                    style="background-image: url(./assets/img/poster/mario.jpg);"></div>
+                                                    style="background-image: url(/assets/img/poster/mario.jpg);"></div>
                                                 <div class="play-btn">
                                                     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
                                                         class="jsx-314b02cb997a0a18">
@@ -221,7 +223,7 @@
                                         <div class="poster">
                                             <a href="#">
                                                 <div class="bg-img thumbnail"
-                                                    style="background-image: url(./assets/img/poster/galaxy3.jpg);">
+                                                    style="background-image: url(/assets/img/poster/galaxy3.jpg);">
                                                 </div>
                                                 <div class="play-btn">
                                                     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
@@ -253,7 +255,7 @@
                                         <div class="poster">
                                             <a href="#">
                                                 <div class="bg-img thumbnail"
-                                                    style="background-image: url(./assets/img/poster/connhot.jpg);">
+                                                    style="background-image: url(/assets/img/poster/connhot.jpg);">
                                                 </div>
                                                 <div class="play-btn">
                                                     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
@@ -285,7 +287,7 @@
                                         <div class="poster">
                                             <a href="#">
                                                 <div class="bg-img thumbnail"
-                                                    style="background-image: url(./assets/img/poster/latmat6.jpg);">
+                                                    style="background-image: url(/assets/img/poster/latmat6.jpg);">
                                                 </div>
                                                 <div class="play-btn">
                                                     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
@@ -317,7 +319,7 @@
                                         <div class="poster">
                                             <a href="#">
                                                 <div class="bg-img thumbnail"
-                                                    style="background-image: url(./assets/img/poster/mario.jpg);"></div>
+                                                    style="background-image: url(/assets/img/poster/mario.jpg);"></div>
                                                 <div class="play-btn">
                                                     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
                                                         class="jsx-314b02cb997a0a18">
@@ -348,7 +350,7 @@
                                         <div class="poster">
                                             <a href="#">
                                                 <div class="bg-img thumbnail"
-                                                    style="background-image: url(./assets/img/poster/galaxy3.jpg);">
+                                                    style="background-image: url(/assets/img/poster/galaxy3.jpg);">
                                                 </div>
                                                 <div class="play-btn">
                                                     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
@@ -380,7 +382,7 @@
                                         <div class="poster">
                                             <a href="#">
                                                 <div class="bg-img thumbnail"
-                                                    style="background-image: url(./assets/img/poster/connhot.jpg);">
+                                                    style="background-image: url(/assets/img/poster/connhot.jpg);">
                                                 </div>
                                                 <div class="play-btn">
                                                     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
@@ -412,7 +414,7 @@
                                         <div class="poster">
                                             <a href="#">
                                                 <div class="bg-img thumbnail"
-                                                    style="background-image: url(./assets/img/poster/latmat6.jpg);">
+                                                    style="background-image: url(/assets/img/poster/latmat6.jpg);">
                                                 </div>
                                                 <div class="play-btn">
                                                     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
@@ -444,7 +446,7 @@
                                         <div class="poster">
                                             <a href="#">
                                                 <div class="bg-img thumbnail"
-                                                    style="background-image: url(./assets/img/poster/mario.jpg);"></div>
+                                                    style="background-image: url(/assets/img/poster/mario.jpg);"></div>
                                                 <div class="play-btn">
                                                     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
                                                         class="jsx-314b02cb997a0a18">
@@ -475,7 +477,7 @@
                                         <div class="poster">
                                             <a href="#">
                                                 <div class="bg-img thumbnail"
-                                                    style="background-image: url(./assets/img/poster/galaxy3.jpg);">
+                                                    style="background-image: url(/assets/img/poster/galaxy3.jpg);">
                                                 </div>
                                                 <div class="play-btn">
                                                     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
@@ -521,7 +523,7 @@
                                         <div class="poster">
                                             <a href="#">
                                                 <div class="bg-img thumbnail"
-                                                    style="background-image: url(./assets/img/poster/connhot.jpg);">
+                                                    style="background-image: url(/assets/img/poster/connhot.jpg);">
                                                 </div>
                                                 <div class="play-btn">
                                                     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
@@ -553,7 +555,7 @@
                                         <div class="poster">
                                             <a href="#">
                                                 <div class="bg-img thumbnail"
-                                                    style="background-image: url(./assets/img/poster/latmat6.jpg);">
+                                                    style="background-image: url(/assets/img/poster/latmat6.jpg);">
                                                 </div>
                                                 <div class="play-btn">
                                                     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
@@ -585,7 +587,7 @@
                                         <div class="poster">
                                             <a href="#">
                                                 <div class="bg-img thumbnail"
-                                                    style="background-image: url(./assets/img/poster/mario.jpg);"></div>
+                                                    style="background-image: url(/assets/img/poster/mario.jpg);"></div>
                                                 <div class="play-btn">
                                                     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
                                                         class="jsx-314b02cb997a0a18">
@@ -616,7 +618,7 @@
                                         <div class="poster">
                                             <a href="#">
                                                 <div class="bg-img thumbnail"
-                                                    style="background-image: url(./assets/img/poster/galaxy3.jpg);">
+                                                    style="background-image: url(/assets/img/poster/galaxy3.jpg);">
                                                 </div>
                                                 <div class="play-btn">
                                                     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
@@ -648,7 +650,7 @@
                                         <div class="poster">
                                             <a href="#">
                                                 <div class="bg-img thumbnail"
-                                                    style="background-image: url(./assets/img/poster/connhot.jpg);">
+                                                    style="background-image: url(/assets/img/poster/connhot.jpg);">
                                                 </div>
                                                 <div class="play-btn">
                                                     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
@@ -680,7 +682,7 @@
                                         <div class="poster">
                                             <a href="#">
                                                 <div class="bg-img thumbnail"
-                                                    style="background-image: url(./assets/img/poster/latmat6.jpg);">
+                                                    style="background-image: url(/assets/img/poster/latmat6.jpg);">
                                                 </div>
                                                 <div class="play-btn">
                                                     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
@@ -712,7 +714,7 @@
                                         <div class="poster">
                                             <a href="#">
                                                 <div class="bg-img thumbnail"
-                                                    style="background-image: url(./assets/img/poster/mario.jpg);"></div>
+                                                    style="background-image: url(/assets/img/poster/mario.jpg);"></div>
                                                 <div class="play-btn">
                                                     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
                                                         class="jsx-314b02cb997a0a18">
@@ -743,7 +745,7 @@
                                         <div class="poster">
                                             <a href="#">
                                                 <div class="bg-img thumbnail"
-                                                    style="background-image: url(./assets/img/poster/galaxy3.jpg);">
+                                                    style="background-image: url(/assets/img/poster/galaxy3.jpg);">
                                                 </div>
                                                 <div class="play-btn">
                                                     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
@@ -775,7 +777,7 @@
                                         <div class="poster">
                                             <a href="#">
                                                 <div class="bg-img thumbnail"
-                                                    style="background-image: url(./assets/img/poster/connhot.jpg);">
+                                                    style="background-image: url(/assets/img/poster/connhot.jpg);">
                                                 </div>
                                                 <div class="play-btn">
                                                     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
@@ -807,7 +809,7 @@
                                         <div class="poster">
                                             <a href="#">
                                                 <div class="bg-img thumbnail"
-                                                    style="background-image: url(./assets/img/poster/latmat6.jpg);">
+                                                    style="background-image: url(/assets/img/poster/latmat6.jpg);">
                                                 </div>
                                                 <div class="play-btn">
                                                     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
@@ -839,7 +841,7 @@
                                         <div class="poster">
                                             <a href="#">
                                                 <div class="bg-img thumbnail"
-                                                    style="background-image: url(./assets/img/poster/mario.jpg);"></div>
+                                                    style="background-image: url(/assets/img/poster/mario.jpg);"></div>
                                                 <div class="play-btn">
                                                     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
                                                         class="jsx-314b02cb997a0a18">
@@ -870,7 +872,7 @@
                                         <div class="poster">
                                             <a href="#">
                                                 <div class="bg-img thumbnail"
-                                                    style="background-image: url(./assets/img/poster/galaxy3.jpg);">
+                                                    style="background-image: url(/assets/img/poster/galaxy3.jpg);">
                                                 </div>
                                                 <div class="play-btn">
                                                     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
@@ -1070,7 +1072,7 @@
                 <div class="container-lg">
                     <div class="wrapper">
                         <div class="flexcol">
-                            <div class="logo"><a href="/"><img src="./assets/img/logo.png" alt="CineMagic"></a></div>
+                            <div class="logo"><a href="/"><img src="/assets/img/logo.png" alt="CineMagic"></a></div>
                             <div class="socials">
                                 <ul class="flexitem main-links">
                                     <li><a href=""><i class="ri-twitter-line"></i></a></li>
@@ -1094,7 +1096,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.0.9/index.min.js"></script>
-    <script src="./assets/js/main.js"></script>
+    <script src="/assets/js/main.js"></script>
 </body>
 
 </html>
