--- a/movie.html
+++ b/movie.html
@@ -13,7 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Swiper -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
-    <link rel="stylesheet/less" href="./assets/css/style.less" />
+    <link rel="stylesheet/less" href="/assets/css/style.less" />
 </head>
 
 <body>
@@ -101,7 +101,7 @@
                                     <div class="poster">
                                         <a data-fslightbox="1" href="https://www.youtube.com/watch?v=e7KHOQ-alqY">
                                             <div class="bg-img thumbnail"
-                                                style="background-image: url(./assets/img/poster/connhot.jpg);">
+                                                style="background-image: url(/assets/img/poster/connhot.jpg);">
                                             </div>
                                             <div class="play-btn">
                                                 <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
@@ -584,7 +584,7 @@
                 <div class="container-lg">
                     <div class="wrapper">
                         <div class="flexcol">
-                            <div class="logo"><a href="/"><img src="./assets/img/logo.png" alt="CineMagic"></a></div>
+                            <div class="logo"><a href="/"><img src="/assets/img/logo.png" alt="CineMagic"></a></div>
                             <div class="socials">
                                 <ul class="flexitem main-links">
                                     <li><a href=""><i class="ri-twitter-line"></i></a></li>
@@ -608,7 +608,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.0.9/index.min.js"></script>
-    <script src="./assets/js/main.js"></script>
+    <script src="/assets/js/main.js"></script>
 </body>
 
 </html>
