--- a/register.html
+++ b/register.html
@@ -13,7 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Swiper -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
-    <link rel="stylesheet/less" href="./assets/css/style.less" />
+    <link rel="stylesheet/less" href="/assets/css/style.less" />
 </head>
 
 <body>
@@ -192,7 +192,7 @@
                 <div class="container-lg">
                     <div class="wrapper">
                         <div class="flexcol">
-                            <div class="logo"><a href="/"><img src="./assets/img/logo.png" alt="CineMagic"></a></div>
+                            <div class="logo"><a href="/"><img src="/assets/img/logo.png" alt="CineMagic"></a></div>
                             <div class="socials">
                                 <ul class="flexitem main-links">
                                     <li><a href=""><i class="ri-twitter-line"></i></a></li>
@@ -216,7 +216,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.0.9/index.min.js"></script>
-    <script src="./assets/js/main.js"></script>
+    <script src="/assets/js/main.js"></script>
 </body>
 
 </html>
