--- a/showtimes.html
+++ b/showtimes.html
@@ -13,7 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Swiper -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
-    <link rel="stylesheet/less" href="./assets/css/style.less" />
+    <link rel="stylesheet/less" href="/assets/css/style.less" />
 </head>
 
 <body>
@@ -467,7 +467,7 @@
                                                     <div class="poster">
                                                         <a href="#">
                                                             <div class="bg-img thumbnail"
-                                                                style="background-image: url(./assets/img/poster/connhot.jpg);">
+                                                                style="background-image: url(/assets/img/poster/connhot.jpg);">
                                                             </div>
                                                             <div class="age-restricted age-16"><span class="badge">16+</span></div>
                                                         </a>
@@ -510,7 +510,7 @@
                                                     <div class="poster">
                                                         <a href="#">
                                                             <div class="bg-img thumbnail"
-                                                                style="background-image: url(./assets/img/poster/connhot.jpg);">
+                                                                style="background-image: url(/assets/img/poster/connhot.jpg);">
                                                             </div>
                                                             <div class="age-restricted age-16"><span class="badge">16+</span></div>
                                                         </a>
@@ -553,7 +553,7 @@
                                                     <div class="poster">
                                                         <a href="#">
                                                             <div class="bg-img thumbnail"
-                                                                style="background-image: url(./assets/img/poster/connhot.jpg);">
+                                                                style="background-image: url(/assets/img/poster/connhot.jpg);">
                                                             </div>
                                                             <div class="age-restricted age-16"><span class="badge">16+</span></div>
                                                         </a>
@@ -596,7 +596,7 @@
                                                     <div class="poster">
                                                         <a href="#">
                                                             <div class="bg-img thumbnail"
-                                                                style="background-image: url(./assets/img/poster/connhot.jpg);">
+                                                                style="background-image: url(/assets/img/poster/connhot.jpg);">
                                                             </div>
                                                             <div class="age-restricted age-16"><span class="badge">16+</span></div>
                                                         </a>
@@ -657,7 +657,7 @@
                                         <div class="poster">
                                             <a href="#">
                                                 <div class="bg-img thumbnail"
-                                                    style="background-image: url(./assets/img/poster/connhot.jpg);">
+                                                    style="background-image: url(/assets/img/poster/connhot.jpg);">
                                                 </div>
                                                 <div class="play-btn">
                                                     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
@@ -689,7 +689,7 @@
                                         <div class="poster">
                                             <a href="#">
                                                 <div class="bg-img thumbnail"
-                                                    style="background-image: url(./assets/img/poster/latmat6.jpg);">
+                                                    style="background-image: url(/assets/img/poster/latmat6.jpg);">
                                                 </div>
                                                 <div class="play-btn">
                                                     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
@@ -721,7 +721,7 @@
                                         <div class="poster">
                                             <a href="#">
                                                 <div class="bg-img thumbnail"
-                                                    style="background-image: url(./assets/img/poster/mario.jpg);"></div>
+                                                    style="background-image: url(/assets/img/poster/mario.jpg);"></div>
                                                 <div class="play-btn">
                                                     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
                                                         class="jsx-314b02cb997a0a18">
@@ -752,7 +752,7 @@
                                         <div class="poster">
                                             <a href="#">
                                                 <div class="bg-img thumbnail"
-                                                    style="background-image: url(./assets/img/poster/galaxy3.jpg);">
+                                                    style="background-image: url(/assets/img/poster/galaxy3.jpg);">
                                                 </div>
                                                 <div class="play-btn">
                                                     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
@@ -784,7 +784,7 @@
                                         <div class="poster">
                                             <a href="#">
                                                 <div class="bg-img thumbnail"
-                                                    style="background-image: url(./assets/img/poster/connhot.jpg);">
+                                                    style="background-image: url(/assets/img/poster/connhot.jpg);">
                                                 </div>
                                                 <div class="play-btn">
                                                     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
@@ -816,7 +816,7 @@
                                         <div class="poster">
                                             <a href="#">
                                                 <div class="bg-img thumbnail"
-                                                    style="background-image: url(./assets/img/poster/latmat6.jpg);">
+                                                    style="background-image: url(/assets/img/poster/latmat6.jpg);">
                                                 </div>
                                                 <div class="play-btn">
                                                     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
@@ -848,7 +848,7 @@
                                         <div class="poster">
                                             <a href="#">
                                                 <div class="bg-img thumbnail"
-                                                    style="background-image: url(./assets/img/poster/mario.jpg);"></div>
+                                                    style="background-image: url(/assets/img/poster/mario.jpg);"></div>
                                                 <div class="play-btn">
                                                     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
                                                         class="jsx-314b02cb997a0a18">
@@ -879,7 +879,7 @@
                                         <div class="poster">
                                             <a href="#">
                                                 <div class="bg-img thumbnail"
-                                                    style="background-image: url(./assets/img/poster/galaxy3.jpg);">
+                                                    style="background-image: url(/assets/img/poster/galaxy3.jpg);">
                                                 </div>
                                                 <div class="play-btn">
                                                     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
@@ -911,7 +911,7 @@
                                         <div class="poster">
                                             <a href="#">
                                                 <div class="bg-img thumbnail"
-                                                    style="background-image: url(./assets/img/poster/connhot.jpg);">
+                                                    style="background-image: url(/assets/img/poster/connhot.jpg);">
                                                 </div>
                                                 <div class="play-btn">
                                                     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
@@ -943,7 +943,7 @@
                                         <div class="poster">
                                             <a href="#">
                                                 <div class="bg-img thumbnail"
-                                                    style="background-image: url(./assets/img/poster/latmat6.jpg);">
+                                                    style="background-image: url(/assets/img/poster/latmat6.jpg);">
                                                 </div>
                                                 <div class="play-btn">
                                                     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
@@ -975,7 +975,7 @@
                                         <div class="poster">
                                             <a href="#">
                                                 <div class="bg-img thumbnail"
-                                                    style="background-image: url(./assets/img/poster/mario.jpg);"></div>
+                                                    style="background-image: url(/assets/img/poster/mario.jpg);"></div>
                                                 <div class="play-btn">
                                                     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
                                                         class="jsx-314b02cb997a0a18">
@@ -1006,7 +1006,7 @@
                                         <div class="poster">
                                             <a href="#">
                                                 <div class="bg-img thumbnail"
-                                                    style="background-image: url(./assets/img/poster/galaxy3.jpg);">
+                                                    style="background-image: url(/assets/img/poster/galaxy3.jpg);">
                                                 </div>
                                                 <div class="play-btn">
                                                     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"
@@ -1106,7 +1106,7 @@
                 <div class="container-lg">
                     <div class="wrapper">
                         <div class="flexcol">
-                            <div class="logo"><a href="/"><img src="./assets/img/logo.png" alt="CineMagic"></a></div>
+                            <div class="logo"><a href="/"><img src="/assets/img/logo.png" alt="CineMagic"></a></div>
                             <div class="socials">
                                 <ul class="flexitem main-links">
                                     <li><a href=""><i class="ri-twitter-line"></i></a></li>
@@ -1130,7 +1130,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.0.9/index.min.js"></script>
-    <script src="./assets/js/main.js"></script>
+    <script src="/assets/js/main.js"></script>
 </body>
 
 </html>
